--- a/bibliography.bib
+++ b/bibliography.bib
@@ -117,6 +117,81 @@
 	year={2023}
 }
 
+@inproceedings{ren2021zero,
+	title={$\{$Zero-offload$\}$: Democratizing $\{$billion-scale$\}$ model training},
+	author={Ren, Jie and Rajbhandari, Samyam and Aminabadi, Reza Yazdani and Ruwase, Olatunji and Yang, Shuangyan and Zhang, Minjia and Li, Dong and He, Yuxiong},
+	booktitle={2021 USENIX Annual Technical Conference (USENIX ATC 21)},
+	pages={551--564},
+	year={2021}
+}
+
+@inproceedings{rajbhandari2021zero,
+	title={Zero-infinity: Breaking the gpu memory wall for extreme scale deep learning},
+	author={Rajbhandari, Samyam and Ruwase, Olatunji and Rasley, Jeff and Smith, Shaden and He, Yuxiong},
+	booktitle={Proceedings of the international conference for high performance computing, networking, storage and analysis},
+	pages={1--14},
+	year={2021}
+}
+@misc{nordstrom2022unstructured,
+	title={Unstructured pruning of pre-trained language models tuned for sentiment classification.},
+	author={Nordstr{\"o}m, Oscar},
+	year={2022}
+}
+@article{janowsky1989pruning,
+	title={Pruning versus clipping in neural networks},
+	author={Janowsky, Steven A},
+	journal={Physical Review A},
+	volume={39},
+	number={12},
+	pages={6600},
+	year={1989},
+	publisher={APS}
+}
+@inproceedings{liu2020topological,
+	title={Topological insights into sparse neural networks},
+	author={Liu, Shiwei and Van der Lee, Tim and Yaman, Anil and Atashgahi, Zahra and Ferraro, Davide and Sokar, Ghada and Pechenizkiy, Mykola and Mocanu, Decebal Constantin},
+	booktitle={Joint European conference on machine learning and knowledge discovery in databases},
+	pages={279--294},
+	year={2020},
+	organization={Springer}
+}
+@article{han2015deep,
+	title={Deep compression: Compressing deep neural networks with pruning, trained quantization and huffman coding},
+	author={Han, Song and Mao, Huizi and Dally, William J},
+	journal={arXiv preprint arXiv:1510.00149},
+	year={2015}
+}
+@article{mozer1989using,
+	title={Using relevance to reduce network size automatically},
+	author={Mozer, Michael C and Smolensky, Paul},
+	journal={Connection Science},
+	volume={1},
+	number={1},
+	pages={3--16},
+	year={1989},
+	publisher={Taylor \& Francis}
+}
+@article{han2015learning,
+	title={Learning both weights and connections for efficient neural network},
+	author={Han, Song and Pool, Jeff and Tran, John and Dally, William},
+	journal={Advances in neural information processing systems},
+	volume={28},
+	year={2015}
+}
+@inproceedings{frantar2023sparsegpt,
+	title={Sparsegpt: Massive language models can be accurately pruned in one-shot},
+	author={Frantar, Elias and Alistarh, Dan},
+	booktitle={International conference on machine learning},
+	pages={10323--10337},
+	year={2023},
+	organization={PMLR}
+}
+@Misc{accelerate,
+	title =        {Accelerate: Training and inference at scale made simple, efficient and adaptable.},
+	author =       {Sylvain Gugger and Lysandre Debut and Thomas Wolf and Philipp Schmid and Zachary Mueller and Sourab Mangrulkar and Marc Sun and Benjamin Bossan},
+	howpublished = {\url{https://github.com/huggingface/accelerate}},
+	year =         {2022}
+}
 @article{esser2019learned,
 	title={Learned step size quantization},
 	author={Esser, Steven K and McKinstry, Jeffrey L and Bablani, Deepika and Appuswamy, Rathinakumar and Modha, Dharmendra S},
@@ -275,20 +350,53 @@
 	year={2023}
 }
 
-@article{han2015deep,
-	title={Deep compression: Compressing deep neural networks with pruning, trained quantization and huffman coding},
-	author={Han, Song and Mao, Huizi and Dally, William J},
-	journal={arXiv preprint arXiv:1510.00149},
-	year={2015}
-}
-
 @article{PPCL,
 	title={Pluggable Pruning with Contiguous Layer Distillation for Diffusion Transformers},
 	author={Ma, Jian and Peng, Qirong and Zhu, Xujie and Xie, Peixing and Chen, Chen and Lu, Haonan},
 	journal={arXiv preprint arXiv:2511.16156},
 	year={2025}
 }
+@article{frankle2018lottery,
+	title={The lottery ticket hypothesis: Finding sparse, trainable neural networks},
+	author={Frankle, Jonathan and Carbin, Michael},
+	journal={arXiv preprint arXiv:1803.03635},
+	year={2018}
+}
+@inproceedings{gale2020sparse,
+	title={Sparse gpu kernels for deep learning},
+	author={Gale, Trevor and Zaharia, Matei and Young, Cliff and Elsen, Erich},
+	booktitle={SC20: International Conference for High Performance Computing, Networking, Storage and Analysis},
+	pages={1--14},
+	year={2020},
+	organization={IEEE}
+}
+@article{wen2016learning,
+	title={Learning structured sparsity in deep neural networks},
+	author={Wen, Wei and Wu, Chunpeng and Wang, Yandan and Chen, Yiran and Li, Hai},
+	journal={Advances in neural information processing systems},
+	volume={29},
+	year={2016}
+}
+@inproceedings{ma2018shufflenet,
+	title={Shufflenet v2: Practical guidelines for efficient cnn architecture design},
+	author={Ma, Ningning and Zhang, Xiangyu and Zheng, Hai-Tao and Sun, Jian},
+	booktitle={Proceedings of the European conference on computer vision (ECCV)},
+	pages={116--131},
+	year={2018}
+}
 
+@techreport{bell2008efficient,
+	title={Efficient sparse matrix-vector multiplication on CUDA},
+	author={Bell, Nathan and Garland, Michael},
+	year={2008},
+	institution={Nvidia Technical Report NVR-2008-004, Nvidia Corporation}
+}
+@article{liu2022unreasonable,
+	title={The unreasonable effectiveness of random pruning: Return of the most naive baseline for sparse training},
+	author={Liu, Shiwei and Chen, Tianlong and Chen, Xiaohan and Shen, Li and Mocanu, Decebal Constantin and Wang, Zhangyang and Pechenizkiy, Mykola},
+	journal={arXiv preprint arXiv:2202.02643},
+	year={2022}
+}
 @article{HierarchicalPrune,
 	title={HierarchicalPrune: Position-Aware Compression for Large-Scale Diffusion Models},
 	author={Kwon, Young D and Li, Rui and Li, Sijia and Li, Da and Bhattacharya, Sourav and Venieris, Stylianos I},
